--- a/style.css
+++ b/style.css
@@ -44,11 +44,24 @@ h2{
 /*                       számláló                          */
 .counter {
     position: absolute;
-    background-color: white;
-    width: 150px;
+    /*background-color: white;*/
+    margin-top: 50px;
+    width: 250px;
     height: 500px;
 }
-
+.counter #score {
+    font-size: 25px;
+    font-weight: 600;
+    text-shadow: 0px 0px 7px white;
+    margin: 10px;
+}
+.counter .plyr{
+    padding: 5px;
+    margin: 5px auto;
+    font-weight: 600;
+}
+.counter #player1 { text-shadow: 0px 0px 7px rgb(0, 162, 255) }
+.counter #player2 {text-shadow: 0px 0px 7px rgb(255, 0, 0)  }
 /*                    kezdő és újrakezdő gomb              */
 .asd  #restart{
     color: white;
@@ -113,13 +126,6 @@ h2{
     padding: 10px;
     text-align: center;
 }
-
-.info #score {
-    font-size: 30px;
-    font-weight: 600;
-    text-shadow: 0px 0px 7px white;
-    margin: 10px;
-}
 .info input {
     background-color: rgb(238, 238, 238);
     color: black;
@@ -127,8 +133,9 @@ h2{
     margin: 5px;
     border-bottom: 1px solid black;
 }
+
 input[type=text]{
-    color: white
+    color: black
 }
 #ok {
     background-color: rgb(0, 255, 0);
@@ -137,15 +144,7 @@ input[type=text]{
     border-radius: 15px;
 }
 input::placeholder{ font-size: 14px; font-weight: 300; }
-.info .plyr{
-    padding: 5px;
-    width: 270px;
-    text-align: center;
-    margin: 5px auto;
-    font-weight: 600;
-}
-.info #player1 { text-shadow: 0px 0px 7px rgb(0, 162, 255) }
-.info #player2 {text-shadow: 0px 0px 7px rgb(255, 0, 0)  }
+
 /*
 #rstrt {
     border: 1px solid rgb(98, 114, 133);
