--- a/style.css
+++ b/style.css
@@ -5,19 +5,30 @@ body {
 }
 
 header {
-    padding: 10px;
     text-align: center;
+    margin: 0px 0px 60px 0px;
 }
+header a {
+    background-color: none;
+}
+.rules {
+    z-index: 5;
+}
+
+.game {
+    display: none;
+}
+
 #nemtom {  animation: hatter 10s infinite ; background-color: rgb(238, 238, 238);}
 @keyframes hatter {
-    0% { box-shadow: 0px 0px   20px rgb(255, 0, 0)}
-    12.5% { box-shadow: 0px 0px  20px rgb(255, 153, 0)}
-    25% { box-shadow: 0px 0px  20px rgb(255, 230, 0)}
-    37.5% { box-shadow: 0px 0px  20px rgb(0, 255, 0)}
-    50% { box-shadow: 0px 0px 20px rgb(0, 132, 255)}
-    62.5% { box-shadow: 0px 0px 20px rgb(195, 0, 255)}
-    75% { box-shadow: 0px 0px 20px rgb(255, 0, 128)}
-    100% { box-shadow: 0px 0px   20px rgb(255, 0, 0)}
+    0%   { box-shadow: 0px 0px 30px rgb(255, 0, 0)   }  
+    12.5%{ box-shadow: 0px 0px 30px rgb(255, 153, 0) }
+    25%  { box-shadow: 0px 0px 30px rgb(255, 230, 0) }
+    37.5%{ box-shadow: 0px 0px 30px rgb(0, 255, 0)   }
+    50%  { box-shadow: 0px 0px 30px rgb(0, 132, 255) }
+    62.5%{ box-shadow: 0px 0px 30px rgb(195, 0, 255) }
+    75%  { box-shadow: 0px 0px 30px rgb(255, 0, 128) }
+    100% { box-shadow: 0px 0px 30px rgb(255, 0, 0)   }
 }
 /*                               cím           */
 h2{ 
@@ -45,26 +56,27 @@ h2{
 .counter {
     position: absolute;
     /*background-color: white;*/
-    margin-top: 50px;
+    margin-top: 100px;
     width: 250px;
     height: 500px;
 }
 .counter #score {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 600;
     text-shadow: 0px 0px 7px white;
     margin: 10px;
 }
 .counter .plyr{
+    font-size: 20px;
     padding: 5px;
-    margin: 5px auto;
+    margin: 10px auto;
     font-weight: 600;
 }
 .counter #player1 { text-shadow: 0px 0px 7px rgb(0, 162, 255) }
 .counter #player2 {text-shadow: 0px 0px 7px rgb(255, 0, 0)  }
 /*                    kezdő és újrakezdő gomb              */
 .asd  #restart{
-    color: white;
+    color: black;
     top: 120px; left: 0px;
     text-align: center;
     position: relative;
@@ -73,7 +85,6 @@ h2{
 }
 #restart:hover {
     text-decoration: none;
-    color:black; 
     cursor: pointer;
 }
 
@@ -168,14 +179,14 @@ a{
     font-size: 1.5em;
     letter-spacing: 0.1em;
     padding: 10px 30px;
-    transition: 0.5s;
+    transition: 0.2s;
     background-color: rgb(238, 238, 238);
     border-radius: 25px;
 }
 a:hover{
     text-decoration: none;
     letter-spacing: 0.25em;
-    box-shadow: 0 0 35px blue;   
+    box-shadow: 0 0 15px blue;   
 }
 a span{
     z-index: 1;
