--- a/style.css
+++ b/style.css
@@ -8,13 +8,40 @@ header {
     text-align: center;
     margin: 0px 0px 60px 0px;
 }
-header a {
-    background-color: none;
+header span {
+    color: white;
+    font-weight: 600;
+    letter-spacing: 2px;
+    cursor: pointer;
+    background-color: rgb(49, 49, 49);
+    box-shadow: 0px 0px 5px black;
+    padding: 10px 40px;
+    border-radius: 25px;
+    margin: 0px 10px;
 }
-.rules {
-    z-index: 5;
-}
+header span:hover { box-shadow: inset 0px 0px 5px black; }
 
+.rules {
+    display: block;
+}
+.developers {
+    display: none;
+    text-align: center;
+    letter-spacing: 1px;
+}
+.developers h1 { padding: 30px 0; }
+.developers .us {
+    margin: 20px 0;
+}
+.developers a {
+    color: black;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.developers a:hover { letter-spacing: 3px; }
 .game {
     display: none;
 }
@@ -172,7 +199,7 @@ input::placeholder{ font-size: 14px; font-weight: 300; }
 
 }
 */
-a{
+.info a{
     margin-top: -50px;
     color : grey;
     text-transform: uppercase;
@@ -183,11 +210,11 @@ a{
     background-color: rgb(238, 238, 238);
     border-radius: 25px;
 }
-a:hover{
+.info a:hover{
     text-decoration: none;
     letter-spacing: 0.25em;
     box-shadow: 0 0 15px blue;   
 }
-a span{
+.info a span{
     z-index: 1;
 }
