--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@ body {
     padding: 30px;
 }
 
+#uu {
+    position: absolute;
+    left: -200px; top: 0;
+    animation: move 2s linear;
+    width: 200px;
+}
+@keyframes move {
+    0%   { left: -200px; top: 0; }
+    100% { left: 100%; top: 0; }
+}
+
+/*                                 fejléc                          */
 header {
     text-align: center;
     margin: 0px 0px 60px 0px;
@@ -20,15 +32,25 @@ header span {
     margin: 0px 10px;
 }
 header span:hover { box-shadow: inset 0px 0px 5px black; }
-
-.rules {
-    display: block;
-}
-.developers {
+/*                                 szabályok                        */
+.developers, .rules {
     display: none;
     text-align: center;
     letter-spacing: 1px;
 }
+.rules {
+    display: block;
+}
+.rules .container {
+    height: 450px;
+    padding: 20px;
+}
+.rules .szabalyok { padding-top: 20px; }
+.rules .szabalyok h2 {text-align: start; } 
+.rules .szabalyok ul { text-align: start; margin: -20px;}
+
+/*                                  fejlesztők                      */
+
 .developers h1 { padding: 30px 0; }
 .developers .us {
     margin: 20px 0;
@@ -42,11 +64,12 @@ header span:hover { box-shadow: inset 0px 0px 5px black; }
     margin-bottom: 20px;
 }
 .developers a:hover { letter-spacing: 3px; }
+/*                játék:                       */
 .game {
     display: none;
 }
 
-#nemtom {  animation: hatter 10s infinite ; background-color: rgb(238, 238, 238);}
+#nemtom { animation: hatter 10s infinite ; background-color: rgb(238, 238, 238); }
 @keyframes hatter {
     0%   { box-shadow: 0px 0px 30px rgb(255, 0, 0)   }  
     12.5%{ box-shadow: 0px 0px 30px rgb(255, 153, 0) }
